2013-11-16  Dmitrijs Ledkovs  <xnox@ubuntu.com>

	* init/xdg.c, util/Makefile.am, test/Makefile.am, init/conf.c:
	  - juggle user_mode & session_file from xdg.c to conf.c
	  - remove INITCTL_BUILD conditional compilation
	  - make it possible to use the same xdg.o in both init & initctl
	  - this is in preparation to handle subdir-objects automake option

2013-11-15  Steve Langasek  <steve.langasek@ubuntu.com>

	* init/tests/test_state.c: test_log_serialise():
	  - simplify the test for unflushed logs; there's no need
	    to let any writes to the logfile succeed before serializing,
	    we only need one synchronization point to make sure we have a
	    non-empty log buffer.
	  - drop a spurious check of nih_io_watches at a point where its
	    content cannot possibly have changed.
	* test/test_util_common.h: drop TIMED_BLOCK() macro, no longer used.

2013-11-14  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.11

2013-11-13  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_state.c: test_log_serialise():
	  - Added extra checks on nih_io_watches.
	  - Need to wait for logfile to be written to handle case where
	    NIH encounters EAGAIN.
	* test/test_util_common.h:
	  - Removed unused macros:
	    - TEST_FORCE_WATCH_UPDATE_TIMEOUT()
	    - TEST_FORCE_WATCH_UPDATE_TIMEOUT_SECS()
	  - Added TIMED_BLOCK() macro.

2013-11-12  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/socket-event.7: PATH => SOCKET_PATH.
	* init/Makefile.am:
	  - Unset DBUS_SYSTEM_BUS_ADDRESS
	  - Explain unsetting vars.
	  - test_xdg: link to libtest_util_common.
	* init/tests/test_main.c:
	  - Include config.h to avoid local NIH test run failure.
	  - Remove test-specific XDG_CONFIG_HOME/XDG_RUNTIME_DIR handling and
	    call test_common_setup() and test_common_cleanup() instead.
	* init/tests/test_xdg.c: Remove test-specific
	  XDG_CONFIG_HOME/XDG_RUNTIME_DIR handling and call test_common_setup()
	  and test_common_cleanup() instead.