@@ -1,3 +1,10 @@
+2013-11-18  James Hunt  <james.hunt@ubuntu.com>
+
+	* scripts/init-checkconf.sh:
+	  - Don't rely on D-Bus any more: spawn a Session Init instead since
+	    this is simpler and allows the two major limitations to be dropped.
+	* scripts/man/init-checkconf.8: Updated date and limitations section.
+
 2013-11-16  Dmitrijs Ledkovs  <xnox@ubuntu.com>
 
 	* init/xdg.c, util/Makefile.am, test/Makefile.am, init/conf.c:
